crates/api/tests/snapshots/snapshots__admin_job_missing.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": {
    "error": {
      "code": "not_found",
      "message": "job not found"
    }
  },
  "status": 404
}
