crates/api/tests/snapshots/snapshots__admin_job_retry_refused.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": {
    "error": {
      "code": "not_retryable",
      "message": "job cannot be retried"
    }
  },
  "status": 409
}
