crates/api/tests/snapshots/snapshots__admin_jobs_paged.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": {
    "active_total": 1,
    "all_total": 3,
    "items": [
      {
        "attempts": 1,
        "cancellable": false,
        "created_at": "2023-11-14T22:14:00Z",
        "finished_at": "2023-11-14T22:14:01Z",
        "id": "job-scan",
        "kind": "library_scan",
        "last_error": null,
        "parent_id": null,
        "priority": "normal",
        "progress": 1.0,
        "retryable": false,
        "started_at": "2023-11-14T22:14:00Z",
        "status": "succeeded",
        "updated_at": "2023-11-14T22:14:01Z"
      }
    ],
    "limit": 1,
    "offset": 1,
    "total": 3
  },
  "status": 200
}
