crates/api/tests/snapshots/snapshots__auth_link.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": {
    "expires_at": null,
    "token": "player-token"
  },
  "status": 200
}
